--- a/src/css/ChartView.css
+++ b/src/css/ChartView.css
@@ -3,21 +3,18 @@
     --oled: #000000;
     --red: rgba(230, 66, 73, 1.0);
     --red2: rgba(207, 48, 57, 1.0);
+    --white: #fff;
 }
 
-/* * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-} */
 
 .titleBB {
-    padding-left: 25px;
+    padding-left: 30px;
 }
 .container {
     max-width: 1400px;
     padding: 0 15px;
     margin: 0 auto;
+    position: relative;
 }
 
 .cards {
@@ -26,6 +23,7 @@
     list-style: none;
     overflow-x: scroll;
     scroll-snap-type: x mandatory;
+    position: relative;
 }
 
 .card:first-child {
@@ -39,35 +37,53 @@
     display: flex;
     flex-direction: column;
     flex: 0 0 100%;
-    padding: 20px;
-    padding-left: 50px;
+    padding: 10px;
+    padding-left: 10px;
     background: #fff;
     border-radius: 15px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 15%);
     scroll-snap-align: none;
     transition: all 0.2s;
+    position: relative;
 }
 .card:not(:last-child) {
     margin-right: 10px;
 }
 .card-image {
-    width: 60%;
-    height: 60%;
-    object-fit: cover;
+    width: 70%;
+    height: 100%;
+    margin: auto;
+    margin-left: 10px;
     border-radius: 15px;
+    position: sticky;
+}
+.card-item, .card-item-subtitle {
+  margin-left: 10px;
 }
 
-.card-icon {
-    max-width: 0.75rem;
-    max-height: 1rem;
-    margin-top: 5px;
-    padding: auto;
+i, .card-icon {
+    padding-top: 15px;
+    margin-top: 15px;
 }
 
-.card:hover .card-link {
+i:hover {
+  color:var(--red);
+  transform: scale(1.2);
+}
+
+.quick-actions {
+  margin-left: 20px;
+}
+
+
+.card:hover {
     background: var(--red2);
+    color: white;
 }
-
+.card:hover i,
+.i:hover {
+  color: var(--white);
+}
 .cards::-webkit-scrollbar {
     display: none;
 }
@@ -110,7 +126,13 @@
   
     .card {
       background: var(--oled);
+      color: white;
     }
+    .card-image {
+      box-shadow: 0px 0px 2px var(--white);
+    
+    }
+
   
     .card:hover {
       background: var(--red2);
